traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:6: error: not found: value y
  y=diag
  ^TraversalDiagonal:7: error: not found: value y
  while (y!=getMondeHauteur()-1){
         ^TraversalDiagonal:9: error: not found: value y
    y=diag
    ^TraversalDiagonal:10: error: not found: value x
    x=0
    ^TraversalDiagonal:11: error: not found: value y
    while (y!=0) {
           ^TraversalDiagonal:12: error: not found: value x
      setPos(x,y)
             ^TraversalDiagonal:12: error: not found: value y
      setPos(x,y)
               ^TraversalDiagonal:15: error: not found: value x
      x=x+1
      ^TraversalDiagonal:16: error: not found: value y
      y=y-1}
      ^